--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <LINK rel="stylesheet" type="text/css" href="style css">
+    <LINK rel="stylesheet" type="text/css" href="style css.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <p>Hello</p>
+    <p class="">Hello</p>
     <p> Test</p>
     <p> aurélie Binet</p>
     <p>ceci est mon site web</p>
