--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <p class="">Hello</p>
+    <h1>Hello</h1>
     <p> Test</p>
     <p> aurélie Binet</p>
     <p>ceci est mon site web</p>
