--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -19,6 +19,12 @@
               <p>Texte centré verticalement dans un carré</p>
             <div>
           </div>
+        
           
+          <div class="col-size">
+            <div class="vert-center">
+              <p>Texte 2 centré verticalement dans un carré</p>
+            <div>
+          </div>
 </body>
 </htML>
