--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECF1</title>
-    <p>ceci est mon site web</p>
-    <BOOTSTRAP:<!-- CSS only -->
+    
+   
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-       
+        <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
 
         <div class="carre"></div>
-        <div class="carre 2"></div>
+        <div class="carre2"></div>
 </body>
 </htML>
