--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <LINK rel="stylesheet" type="text/css" href="style css.css">
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
-
+<h1>TITRE</h1>
         <div class="carre"></div>
         <div class="carre2"></div>
 </body>
