--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,16 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap</title>
+    <title>Les Maraudes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="main.css" rel="stylesheet">
+
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <center>
+   <p>L'association les maraudes</p> ; 
+    </center>
+     
+     
 
-   <div>carre</div>
-   <div>carrea</div>
+   <div>carre</div>;
+   <div>carrea</div>;
+
   </body>
 
 </html>
