--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,16 +8,14 @@
     <link href="main.css" rel="stylesheet">
 
   </head>
-  <body>
-    <center>
+  <body>;
+  
    <p>L'association les maraudes</p> ; 
-    </center>
-     
-     
+  
+ <div>carre</div>
+ <div>carrea</div>
 
-   <div>carre</div>;
-   <div>carrea</div>;
-
+ 
   </body>
 
 </html>
