--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -10,7 +10,7 @@
   </head>
   <body>;
   
-   <p>L'association les maraudes</p> ; 
+   <p>Association des maraudes</p> ; 
   
  <div>carre</div>
  <div>carrea</div>
