--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,8 +8,8 @@
     <link href="main.css" rel="stylesheet">
 
   </head>
-  <body>;
-  
+  <body>
+      
    <p>Association des maraudes</p> ; 
   
  <div>carre</div>
