--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Les Maraudes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="main.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
   </head>
   <body>
-      
+
    <p>Association des maraudes</p> ; 
   
- <div>carre</div>
- <div>carrea</div>
+   <div class="carre"></div>
+   <div class="carrea"></div>
 
  
   </body>
