--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,4 +1,4 @@
-fr">
+<!DOCTYPE html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@ fr">
    <p>Association des maraudes</p> ; 
   
    <div class="carre"></div>
-   <div class="carrea"></div>
+   <div>class="carrea"></div>
 
  
   </body>
