--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,7 +12,7 @@
    <p>Association des maraudes</p> ; 
   
    <div class="carre"></div>
-   <div>class="carrea"></div>
+   <div class="carrea"></div>
 
  
   </body>
