--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-   <p>Association des maraudes</p> ; 
+   <p>Association des maraudes</p> 
   
    <div class="carre"></div>
    <div class="carrea"></div>
