--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,20 +1,21 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
+  <html lang="fr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Les Maraudes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+ 
+ 
+    <title>Association les maraudes</title>
+
+ <div classname="carré"></div>
+ <div classname="carréa"></div>
 
   </head>
   <body>
-
-   <p>Association des maraudes</p> 
-  
-   <div class="carre"></div>
-   <div class="carrea"></div>
-
- 
+    
   </body>
-
-</html>
+  </html>
