--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,11 +8,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
  
-    <title>Association les maraudes</title>
+    <p>Association les maraudes</p>
 
  <div classname="carré"></div>
  <div classname="carréa"></div>
-<p>je suis une couleur</p>
+
   </head>
   <body>
     
