--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -10,8 +10,8 @@
 
     <p>Association les maraudes</p>
 
- <div classname="carré"></div>
- <div classname="carréa"></div>
+ <div classname="carre"></div>
+ <div classname="carrea"></div>
 
   </head>
   <body>
