--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,7 +12,7 @@
     <p>Association les maraudes</p>
     <div> class name="carre"></div>
 
-    <div<>class name="careea"></divclass>
+    <div> class name="careea"></divclass>
     
   </head>
   <body>
