--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,6 +2,7 @@
   <html lang="fr">
   
   <head>
+    <title>Et voici le titre de ma page !</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
