--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -16,8 +16,8 @@
   <body>
     <p>Association les maraudes</p>
 
-    <div class name="carre"></div>
-    <div class name="careea"></div>
+    <div class="carre"></div>
+    <div class="careea"></div>
     
      
 
