--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-    <p>Association les maraudes</p>
+    <h1>>Association les maraudes</h1>
 
     <div class="carre"></div>
     <div class="careea"></div>
