--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -17,8 +17,10 @@
     <div class="carre"></div>
     <div class="careea"></div>
     
-     
-
-
+    <nav>
+    <ul>
+      <li>Accueil</li>
+      <li>qui sommes-nous</li>
+    </nav>
   </body>
   </html>
