--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -20,7 +20,10 @@
     <nav>
     <ul>
       <li>Accueil</li>
-      <li>qui sommes-nous</li>
+      <li>Qui sommes-nous</li>
+      <li>Evenement</li>
+      <li>Rechercher</li>
+   </ul>  
     </nav>
   </body>
   </html>
