--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -14,7 +14,7 @@
   <body>
     <h1>>Association les maraudes</h1>
 
-    <div class="carre Accueil"></div>
+    <div class="carre"></div>
     <div class="careea"></div>
     
     <nav>
