--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -20,7 +20,7 @@
     <ul>
       <li>Accueil</li>
       <li>Qui sommes-nous</li>
-      <li>Evenement</li>
+      <li>Nos actions</li>
       <li>Rechercher</li>
    </ul>  
     </nav>
