--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -13,14 +13,16 @@
   </head>
   <body>
     <h1>>Association les maraAudes</h1>
-
-  
+<p>ceci est mon code</p>
     <nav>
     <ul>
       <li>Accueil </li>
       <li>Qui sommes-nous</li>
       <li>Nos actions</li>
       <li>Rechercher</li>
+
+
+      <img src="1281927-un-sdf-en-france-illustration.jpg">
    </ul>  
     </nav>
   </body>
