--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -20,18 +20,27 @@
       <li>
       <li><a href="#"></a>Accueil</a></li>
 
-      <li><a href="#"></a>Qui sommes-nous</a></li>
+      <li><a href="#"></a>Qui sommes-nous</a>
+        <ul>
       <li><a href="#"></a>Des médecins</a></li>
       <li><a href="#"></a>Des bénévoles</a></li>
-
-      <li><a href="#"></a> Actions</a></li>
+        </ul>
+        </li>
+      <li><a href="#"></a> Actions</a>
+      <ul>
       <li><a href="#"></a> Donner de soi</a></li>
       <li><a href="#"></a> Parler</a></li>
-      <li><a href="#"></a> Manger,Couverture</a></li>
-
-      <li><a href="#"></a>Rechercher</li></li>
+      <li><a href="#"></a> Manger</a></li>
+      <li><a href="#"></a> Couverture</a></li>
+      </ul>
+      </li>
+      <ul>
+        <li>
+      <li><a href="#"></a>Rechercher</li>
+      <ul>
       <li><a href="#"></a>Hébergements</a></li>
-      
+      </ul>
+      </li>
       
 
     </ul>
