--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -36,16 +36,13 @@
       </li>
       <ul>
         <li>
-      <li><a href="#"></a>Rechercher</li>
+      <li<a href="#"></a>Rechercher</a>
       <ul>
       <li><a href="#"></a>Hébergements</a></li>
-      </ul>
-      </li>
-      
-
     </ul>
-    </nav>
 </li>
+      
+    </nav>
   </head>
   </body>
   </html>
