--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -44,33 +44,32 @@
       
     </nav>
     <img src="<index.jpg>"
-     <La mission des maraudes d’intervention sociale d’EMMAÜS Solidarité est avant tout
+
+    <p>La mission des maraudes d’intervention sociale d’EMMAÜS Solidarité est avant tout
      d’aller à la rencontre des personnes installées dans la rue qui ne fréquentent plus 
      les dispositifs d’accueil et d’hébergement. 
      L’objectif est de lutter contre l’isolement
       et de tisser un lien social basé sur l’écoute et le dialogue. La relation de
        confiance ainsi créée permet aux travailleurs sociaux de proposer 
        aux personnes de les accompagner dans la construction de leur projet 
-       personnel.">
+       personnel."></p>
 
-       <img src="Duo-riverain_sdf-femme-trottoir-1.jpg>""
-      < Il s’agit d’informer et de sensibiliser les personnes
+       <img src="Duo-riverain_sdf-femme-trottoir-1.jpg>"
+
+      <p>Il s’agit d’informer et de sensibiliser les personnes
       sur les dispositifs parisiens d’accueil 
        et d’orientation.  Les travailleurs sociaux des maraudes proposent 
-       un accompagnement social global, étape par étape.>
+       un accompagnement social global, étape par étape.</p>
 
-       <img src=""Duo-riverain_sdf-femme-trottoir-1.jpg">
+       <
 
-  
-     <Souvent équipés d’un thermos de café et de quelques biscuits, les bénévoles parcourent
+     <p> Equipés d’un thermos de café et de quelques biscuits, les bénévoles parcourent
      les rues à la rencontre des personnes sans abri.
      Le plus important est de prendre le temps de la rencontre : discuter, s’intéresser, 
      écouter, partager autour d’une boisson chaude. Petit à petit, 
      au fil des tournées, les langues se délient et une relation de
       confiance se crée, 
-     qui peut permettre de proposer un hébergement, 
-
-    un accompagnement pour se réinsérer.>
+     qui peut permettre de proposer un hébergement, un accompagnement pour se réinsérer.> </p>
       
   </head>
   </body>
