--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -13,6 +13,8 @@
   </head>
   <link rel="stylesheet" href="monfichier.css">
   <body>
+    <div-align="center">
+      <div id="bandeau" style="text-align: center">
     <h1>>Association les maraudes</h1>
   
     <nav>
@@ -45,7 +47,7 @@
     </nav>
     <img src="<index.jpg>"
 
-    <p>La mission des maraudes d’intervention sociale d’EMMAÜS Solidarité est avant tout
+   <p>La mission des maraudes d’intervention sociale d’EMMAÜS Solidarité est avant tout
      d’aller à la rencontre des personnes installées dans la rue qui ne fréquentent plus 
      les dispositifs d’accueil et d’hébergement. 
      L’objectif est de lutter contre l’isolement
@@ -56,7 +58,7 @@
 
        <img src="Duo-riverain_sdf-femme-trottoir-1.jpg>"
 
-      <p>Il s’agit d’informer et de sensibiliser les personnes
+    <p>Il s’agit d’informer et de sensibiliser les personnes
       sur les dispositifs parisiens d’accueil 
        et d’orientation.  Les travailleurs sociaux des maraudes proposent 
        un accompagnement social global, étape par étape.</p>
