--- a/INDEX;HTML.html
+++ b/INDEX;HTML.html
@@ -32,7 +32,7 @@
       <ul>
       <li><a href="#"></a> Donner de soi</a></li>
       <li><a href="#"></a> Parler</a></li>
-      <li><a href="#"></a> Manger</a></li>
+      <li><a href="#"></a> Manger1</a></li>
       <li><a href="#"></a> Couverture</a></li>
       </ul>
       </li>
