--- a/git2/Index.html
+++ b/git2/Index.html
@@ -45,7 +45,7 @@
 </li>
       
     </nav>
-    <img src="IMAGE1 Duo-riverain_sdf-femme-trottoir-1.jpg"
+    <img src="IMAGE1 Duo-riverain_sdf-femme-trottoir-1.jpg">
 
    <p>La mission des maraudes d’intervention sociale d’EMMAÜS Solidarité est avant tout
      d’aller à la rencontre des personnes installées dans la rue qui ne fréquentent plus 
@@ -56,7 +56,7 @@
        aux personnes de les accompagner dans la construction de leur projet 
        personnel."</p>
 
-       <img src="IMAGE2/Maraude-matinale-Paris-4-2017-Alexis-Anice-2-1024x684.jpg"
+       <img src="IMAGE2/Maraude-matinale-Paris-4-2017-Alexis-Anice-2-1024x684.jpg">
 
     <p>Il s’agit d’informer et de sensibiliser les personnes
       sur les dispositifs parisiens d’accueil 
