--- a/git2/Index.html
+++ b/git2/Index.html
@@ -56,8 +56,8 @@
        aux personnes de les accompagner dans la construction de leur projet 
        personnel."</p>
 
-       <img src="IMAGE2"
-       
+       <img src="IMAGE2">
+
     <p>Il s’agit d’informer et de sensibiliser les personnes
       sur les dispositifs parisiens d’accueil 
        et d’orientation.  Les travailleurs sociaux des maraudes proposent 
