--- a/git2/Index.html
+++ b/git2/Index.html
@@ -34,7 +34,8 @@
       <li><a href="#"></a> Parler</a></li>
       <li><a href="#"></a> Manger</a></li>
       <li><a href="#"></a> Couverture</a></li>
-      </ul>
+      <li><a href="#"></a>Appeler le 15</a></li>
+    </ul>
       </li>
       <ul>
         <li>
@@ -45,7 +46,7 @@
 </li>
       
     </nav>
-    <img src="IMAGE1">
+    <img src="iMAGE1">
 
    <p>La mission des maraudes d’intervention sociale d’EMMAÜS Solidarité est avant tout
      d’aller à la rencontre des personnes installées dans la rue qui ne fréquentent plus 
